MOVE-3657 OpenRewrite, APT, JAXB og JAXWS (not compiling)