@@ -60,7 +60,7 @@ public class FileMessagePersister implements MessagePersister {
         if (bytes < unit) return bytes + " B";
         int exp = (int) (Math.log(bytes) / Math.log(unit));
         String pre = "kMGTPE".charAt(exp - 1) + "";
-        return String.format("%.1f %sB", bytes / Math.pow(unit, exp), pre);
+        return "%.1f %sB".formatted(bytes / Math.pow(unit, exp), pre);
     }
 
     private String getMessageFiledirPath(String messageId) {
